# flash-attention-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
gtest/include/gtest/: gtest.h
gtest/include/gtest/internal/: gtest-port.h
gtest/src/: gtest-death-test.cc  gtest.cc
include/: common.h  cuda_timer.h  logging.h  tensor.h  tester.h  util.h
src/: api.cpp  fa_api.h  main.cpp
src/common/: tester.h
src/flash-attention/: attn_bias.h  flash.h  flash_fwd_kernel.h  flash_fwd_launch_template.h  kernel_traits.h  mask.h  softmax.h  static_switch.h
src/flash_attn_v2/: alibi.h  flash_fwd_kernel.h  flash_fwd_launch_template.h  kernel_traits.h  kernel_traits_sm90.h  softmax.h  utils.h
src/ops/: flash_attn_v2.cpp  flash_attn_v2.h
src/test/: test.cpp
